--- a/Discussion-comments.html
+++ b/Discussion-comments.html
@@ -43,7 +43,8 @@
                                 <li><a class="dropdown-item" href="#">View profile</a></li>
                                 <li><a class="dropdown-item" href="#">Edit profile</a></li>
                                 <li><a class="dropdown-item" href="Members-page.html">View Members</a></li>
-                                <li><a class="dropdown-item" href="Countries-Communities.html">Country/Community</a></li>
+                                <li><a class="dropdown-item" href="Countries-Communities.html">Country/Community</a>
+                                </li>
                                 <li><a class="dropdown-item" href="#">Logout</a></li>
                             </ul>
                         </div>
@@ -192,7 +193,8 @@
                         <div class="dic-comment-head-setion">
                             <p class="">Title name will come here</p>
                             <p class="">3 comments <i class="fa-solid fa-comment ms-2"></i></p>
-                            <button class="back-btn"><a href="#"><span class="back">Back</span><span class="add">Add</span></a></button>
+                            <button class="back-btn"><a href="#"><span class="back">Back</span><span
+                                        class="add">Add</span></a></button>
                         </div>
                         <div class="dic-comment-box">
                             <div class="reviews-box">
