--- a/Members-detailed.html
+++ b/Members-detailed.html
@@ -42,7 +42,8 @@
                                 <li><a class="dropdown-item" href="#">View profile</a></li>
                                 <li><a class="dropdown-item" href="#">Edit profile</a></li>
                                 <li><a class="dropdown-item" href="Members-page.html">View Members</a></li>
-                                <li><a class="dropdown-item" href="Countries-Communities.html">Country/Community</a></li>
+                                <li><a class="dropdown-item" href="Countries-Communities.html">Country/Community</a>
+                                </li>
                                 <li><a class="dropdown-item" href="#">Logout</a></li>
                             </ul>
                         </div>
@@ -234,17 +235,22 @@
 
                         <div class=" member-box row ">
                             <p class="col-lg-3 col-md-4 col-sm-12 first-title">Expertise</p>
-                            <p class="col-lg-9 col-md-8 col-sm-12 second-p">Pharmacy; General medicine; Anesthesia-resuscitation; Cardiology; Communication; Humanitarian; Para medical</p>
+                            <p class="col-lg-9 col-md-8 col-sm-12 second-p">Pharmacy; General medicine;
+                                Anesthesia-resuscitation; Cardiology; Communication; Humanitarian; Para medical</p>
                         </div>
                         <div class=" member-box row ">
                             <p class="col-lg-3 col-md-4 col-sm-12 first-title">Profile</p>
                             <p class="col-lg-9 col-md-8 col-sm-12 second-p">Expert Committee; ANR; Health Program</p>
                         </div>
                         <div class="member-contain">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis impedit quo quia reprehenderit ducimus rem perferendis magnam reiciendis provident iusto dolorum dicta laboriosam, nulla earum quod sint iste recusandae facilis?</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis impedit quo quia
+                                reprehenderit ducimus rem perferendis magnam reiciendis provident iusto dolorum dicta
+                                laboriosam, nulla earum quod sint iste recusandae facilis?</p>
                         </div>
                         <div class="member-contain">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis impedit quo quia reprehenderit ducimus rem perferendis magnam reiciendis provident iusto dolorum dicta laboriosam, nulla earum quod sint iste recusandae facilis?</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis impedit quo quia
+                                reprehenderit ducimus rem perferendis magnam reiciendis provident iusto dolorum dicta
+                                laboriosam, nulla earum quod sint iste recusandae facilis?</p>
                         </div>
                         <div class="btn-section">
                             <button onclick="window.location='./Members-page.html';"> Back to members</button>
