--- a/Admin-Private-Documents-Case.html
+++ b/Admin-Private-Documents-Case.html
@@ -42,7 +42,8 @@
                                 <li><a class="dropdown-item" href="#">View profile</a></li>
                                 <li><a class="dropdown-item" href="#">Edit profile</a></li>
                                 <li><a class="dropdown-item" href="Members-page.html">View Members</a></li>
-                                <li><a class="dropdown-item" href="Countries-Communities.html">Country/Community</a></li>
+                                <li><a class="dropdown-item" href="Countries-Communities.html">Country/Community</a>
+                                </li>
                                 <li><a class="dropdown-item" href="#">Logout</a></li>
                             </ul>
                         </div>
@@ -656,8 +657,8 @@
                                 <div class="col-12 d-flex justify-content-between align-items-center">
                                     <div class="col-lg-4 col-md-5 col-sm-6">
                                         <div class="dropdown  dropdown-section">
-                                            <div class=" dropdown-toggle dropdown-title dropdown-title-2 " data-bs-toggle="dropdown"
-                                                aria-expanded="false">
+                                            <div class=" dropdown-toggle dropdown-title dropdown-title-2 "
+                                                data-bs-toggle="dropdown" aria-expanded="false">
                                                 <span> Privet </span>
                                                 <span class="ms-auto icon-box"><iconify-icon icon="teenyicons:up-solid"
                                                         class="up-down-arro"></iconify-icon></span>
