--- a/Members-detailed.html
+++ b/Members-detailed.html
@@ -79,8 +79,7 @@
                     <div class="dropdown  dropdown-section">
                         <div class=" dropdown-toggle dropdown-title " data-bs-toggle="dropdown" aria-expanded="false">
                             <span> Algeria </span>
-                            <span class="ms-auto icon-box"><iconify-icon icon="teenyicons:up-solid"
-                                    class="up-down-arro"></iconify-icon></span>
+                            <span class="ms-auto icon-box"><i class="fa-solid fa-caret-up"></i></span>
                         </div>
                         <ul class="dropdown-menu ">
                             <li><a class="dropdown-item" href="#">Global </a></li>
@@ -92,7 +91,7 @@
                 <div class="navbar-toggler " data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <!-- <span class="navbar-toggler-icon"></span> -->
-                    <iconify-icon icon="ci:menu-alt-05"></iconify-icon>
+                    <i class="fa-solid fa-bars-staggered"></i>
                 </div>
                 <div class="collapse navbar-collapse col-lg-8" id="navbarSupportedContent">
                     <ul class="navbar-nav menu-iteam  mb-2 mb-lg-0 ">
