--- a/News-page.html
+++ b/News-page.html
@@ -187,93 +187,71 @@
                     </aside>
                 </div>
                 <div class="col-lg-8 col-md-8 col-sm-12 order-1 order-lg-2  order-md-2">
-                    <div class="news-grid-section">
-                        <div class="row">
-                            <div class="col-lg-6 col-md-6 col-sm-12 ">
-                                <div class="card card-box">
-                                    <a href="News-blog-page.html"><img src="assets/img/all/childern/Mask Group 9.png"
-                                            alt="..."></a>
-                                    <div class="card-body">
-                                        <p class="date">20/02/2023</p>
-                                        <a href="News-blog-page.html">
-                                            <p class="card-text">News title will come here news title will come here
-                                            </p>
-                                        </a>
+                        <div class="news-grid-section ">
+                            <div class="card">
+                                <a href="News-blog-page.html">
+                                    <div class="img-box">
+                                        <img src="assets/img/all/childern/Mask Group 9.png" alt="...">
                                     </div>
+                                </a>
+                                <div class="card-body">
+                                    <p class="date">20/02/2023</p>
+                                    <a href="News-blog-page.html">
+                                        <p class="card-text">News title will come here news title will come here
+                                        </p>
+                                        <p class="card-text">News title will come here news title will come here News
+                                            title will come here news title will come here
+                                        </p>
+                                    </a>
                                 </div>
                             </div>
                             <!-- 2 -->
-                            <div class="col-lg-6 col-md-6 col-sm-12">
-                                <div class="card card-box">
-                                    <a href="News-blog-page.html"><img src="assets/img/all/childern/Mask Group 9.png"
-                                            alt="..."></a>
-                                    <div class="card-body">
-                                        <p class="date">20/02/2023</p>
-                                        <a href="News-blog-page.html">
-                                            <p class="card-text">News title will come here news title will come here
-                                            </p>
-                                        </a>
+                            <div class=" card ">
+                                <a href="News-blog-page.html">
+                                    <div class="img-box">
+                                        <img src="assets/img/all/childern/Mask Group 9.png" alt="...">
                                     </div>
+                                </a>
+                                <div class="card-body">
+                                    <p class="date">20/02/2023</p>
+                                    <a href="News-blog-page.html">
+                                        <p class="card-text">News title will come here news title will come here
+                                        </p>
+                                    </a>
                                 </div>
                             </div>
                             <!-- 3 -->
-                            <div class="col-lg-6 col-md-6 col-sm-12">
-                                <div class="card card-box">
-                                    <a href="News-blog-page.html"><img src="assets/img/all/childern/Mask Group 9.png"
-                                            alt="..."></a>
-                                    <div class="card-body">
-                                        <p class="date">20/02/2023</p>
-                                        <a href="News-blog-page.html">
-                                            <p class="card-text">News title will come here news title will come here
-                                            </p>
-                                        </a>
+                            <div class=" card ">
+                                <a href="News-blog-page.html">
+                                    <div class="img-box">
+                                        <img src="assets/img/all/childern/Mask Group 9.png" alt="...">
                                     </div>
+                                </a>
+                                <div class="card-body">
+                                    <p class="date">20/02/2023</p>
+                                    <a href="News-blog-page.html">
+                                        <p class="card-text">News title will come here news title will come here
+                                        </p>
+                                    </a>
                                 </div>
                             </div>
                             <!-- 4 -->
-                            <div class="col-lg-6 col-md-6 col-sm-12">
-                                <div class="card card-box">
-                                    <a href="News-blog-page.html"><img src="assets/img/all/childern/Mask Group 9.png"
-                                            alt="..."></a>
-                                    <div class="card-body">
-                                        <p class="date">20/02/2023</p>
-                                        <a href="News-blog-page.html">
-                                            <p class="card-text">News title will come here news title will come here
-                                            </p>
-                                        </a>
+                            <div class=" card ">
+                                <a href="News-blog-page.html">
+                                    <div class="img-box">
+                                        <img src="assets/img/all/childern/Mask Group 9.png" alt="...">
                                     </div>
+                                </a>
+                                <div class="card-body">
+                                    <p class="date">20/02/2023</p>
+                                    <a href="News-blog-page.html">
+                                        <p class="card-text">News title will come here news title will come here
+                                        </p>
+                                    </a>
                                 </div>
                             </div>
-                            <!-- 5 -->
-                            <div class="col-lg-6 col-md-6 col-sm-12">
-                                <div class="card card-box">
-                                    <a href="News-blog-page.html"><img src="assets/img/all/childern/Mask Group 9.png"
-                                            alt="..."></a>
-                                    <div class="card-body">
-                                        <p class="date">20/02/2023</p>
-                                        <a href="News-blog-page.html">
-                                            <p class="card-text">News title will come here news title will come here
-                                            </p>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- 6 -->
-                            <div class="col-lg-6 col-md-6 col-sm-12">
-                                <div class="card card-box">
-                                    <a href="News-blog-page.html"><img src="assets/img/all/childern/Mask Group 9.png"
-                                            alt="..."></a>
-                                    <div class="card-body">
-                                        <p class="date">20/02/2023</p>
-                                        <a href="News-blog-page.html">
-                                            <p class="card-text">News title will come here news title will come here
-                                            </p>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
+
                         </div>
-                    </div>
                     <div class="pre-next-setion">
                         <div>
                             <p class="preview-tile active">
