--- a/index.html
+++ b/index.html
@@ -114,6 +114,29 @@
         </div>
     </div>
 
+    <footer>
+        <div class="container">
+            <div class="d-flex align-items-center justify-content-between">
+                <div class="col-lg-4 col-md-4 col-sm-6 ">
+                    <div class="text-center">
+                        <a href="#" class="connect-info">Connect with us</a>
+                    </div>
+                </div>
+                <div class="col-lg-8 col-md-8 col-sm-6">
+                    <div>
+                        <ul class="footer-icon-box">
+                            <li class="icon"><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                            <li class="icon"><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+                            <li class="icon"><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+                            <li class="icon icon-b"><a href="#"><i class="fa-solid fa-rss"></i></a></li>
+
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    
     <!-- iconify icon -->
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 
