--main-css-responsive-event-news-page

--- a/Event-page.html
+++ b/Event-page.html
@@ -190,14 +190,15 @@
                 <div class="col-lg-8 col-md-8 col-sm-12 order-1 order-lg-2  order-md-2">
                     <div class="Event-body">
                         <div class="event-card-body">
-                            <div class="row align-items-center">
-                                <div class="col-lg-5 col-md-3 col-sm-12">
-                                    <div class="img-box">
-                                        <a href="Event-Blog-page.html"><img
-                                                src="assets/img/all/childern/Mask Group 10.png" alt=""></a>
-                                    </div>
+                        <div class="row align-items-center">
+                                <div class="col-lg-5 col-md-12 ">
+                                    <a href="Event-Blog-page.html">
+                                        <div class="img-box">
+                                            <img src="assets/img/all/childern/Mask Group 10.png" alt="">
+                                        </div>
+                                    </a>
                                 </div>
-                                <div class="col-lg-7 col-md-9 col-sm-12">
+                                <div class="col-lg-7 col-md-12 ">
                                     <div class="event-contain-body">
                                         <a href="Event-Blog-page.html">
                                             <p class="main-title">Event title will come here event title will come here
@@ -212,108 +213,113 @@
                         <!-- 2 -->
                         <div class="event-card-body">
                             <div class="row align-items-center">
-                                <div class="col-lg-5 col-md-3 col-sm-12">
-                                    <div class="img-box">
-                                        <a href="Event-Blog-page.html"><img
-                                                src="assets/img/all/childern/Mask Group 10.png" alt=""></a>
-                                    </div>
-                                </div>
-                                <div class="col-lg-7 col-md-9 col-sm-12">
-                                    <div class="event-contain-body">
+                                    <div class="col-lg-5 col-md-12 ">
                                         <a href="Event-Blog-page.html">
-                                            <p class="main-title">Event title will come here event title will come here
-                                                event title will
-                                                come here even title will come here</p>
+                                            <div class="img-box">
+                                                <img src="assets/img/all/google-icon.png" alt="">
+                                            </div>
                                         </a>
-                                        <p class="date">20/02/2023 - 22/02/2023</p>
+                                    </div>
+                                    <div class="col-lg-7 col-md-12 ">
+                                        <div class="event-contain-body">
+                                            <a href="Event-Blog-page.html">
+                                                <p class="main-title">Event title will come here event title will come here
+                                                    event title will
+                                                    come here even title will come here</p>
+                                            </a>
+                                            <p class="date">20/02/2023 - 22/02/2023</p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
                         <!-- 3 -->
                         <div class="event-card-body">
                             <div class="row align-items-center">
-                                <div class="col-lg-5 col-md-3 col-sm-12">
-                                    <div class="img-box">
-                                        <a href="Event-Blog-page.html"><img
-                                                src="assets/img/all/childern/Mask Group 10.png" alt=""></a>
-                                    </div>
-                                </div>
-                                <div class="col-lg-7 col-md-9 col-sm-12">
-                                    <div class="event-contain-body">
+                                    <div class="col-lg-5 col-md-12 ">
                                         <a href="Event-Blog-page.html">
-                                            <p class="main-title">Event title will come here event title will come here
-                                                event title will
-                                                come here even title will come here</p>
+                                            <div class="img-box">
+                                                <img src="assets/img/all/johan-dear.png" alt="">
+                                            </div>
                                         </a>
-                                        <p class="date">20/02/2023 - 22/02/2023</p>
+                                    </div>
+                                    <div class="col-lg-7 col-md-12 ">
+                                        <div class="event-contain-body">
+                                            <a href="Event-Blog-page.html">
+                                                <p class="main-title">Event title will come here event title will come here
+                                                    event title will
+                                                    come here even title will come here</p>
+                                            </a>
+                                            <p class="date">20/02/2023 - 22/02/2023</p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
                         <!-- 4 -->
                         <div class="event-card-body">
                             <div class="row align-items-center">
-                                <div class="col-lg-5 col-md-3 col-sm-12">
-                                    <div class="img-box">
-                                        <a href="Event-Blog-page.html"><img
-                                                src="assets/img/all/childern/Mask Group 10.png" alt=""></a>
-                                    </div>
-                                </div>
-                                <div class="col-lg-7 col-md-9 col-sm-12">
-                                    <div class="event-contain-body">
+                                    <div class="col-lg-5 col-md-12 ">
                                         <a href="Event-Blog-page.html">
-                                            <p class="main-title">Event title will come here event title will come here
-                                                event title will
-                                                come here even title will come here</p>
+                                            <div class="img-box">
+                                                <img src="assets/img/all/childern/Mask Group 10.png" alt="">
+                                            </div>
                                         </a>
-                                        <p class="date">20/02/2023 - 22/02/2023</p>
+                                    </div>
+                                    <div class="col-lg-7 col-md-12 ">
+                                        <div class="event-contain-body">
+                                            <a href="Event-Blog-page.html">
+                                                <p class="main-title">Event title will come here event title will come here
+                                                    event title will
+                                                    come here even title will come here</p>
+                                            </a>
+                                            <p class="date">20/02/2023 - 22/02/2023</p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
                         <!-- 5 -->
                         <div class="event-card-body">
                             <div class="row align-items-center">
-                                <div class="col-lg-5 col-md-3 col-sm-12">
-                                    <div class="img-box">
-                                        <a href="Event-Blog-page.html"><img
-                                                src="assets/img/all/childern/Mask Group 10.png" alt=""></a>
-                                    </div>
-                                </div>
-                                <div class="col-lg-7 col-md-9 col-sm-12">
-                                    <div class="event-contain-body">
+                                    <div class="col-lg-5 col-md-12 ">
                                         <a href="Event-Blog-page.html">
-                                            <p class="main-title">Event title will come here event title will come here
-                                                event title will
-                                                come here even title will come here</p>
+                                            <div class="img-box">
+                                                <img src="	https://i.pinimg.com/originals/ca/0b/26/ca0b260e2dd0ccbe76e310013e757911.jpg" alt="">
+                                            </div>
                                         </a>
-                                        <p class="date">20/02/2023 - 22/02/2023</p>
+                                    </div>
+                                    <div class="col-lg-7 col-md-12 ">
+                                        <div class="event-contain-body">
+                                            <a href="Event-Blog-page.html">
+                                                <p class="main-title">Event title will come here event title will come here
+                                                    event title will
+                                                    come here even title will come here</p>
+                                            </a>
+                                            <p class="date">20/02/2023 - 22/02/2023</p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
                         <!-- 6 -->
                         <div class="event-card-body">
                             <div class="row align-items-center">
-                                <div class="col-lg-5 col-md-3 col-sm-12">
-                                    <div class="img-box">
-                                        <a href="Event-Blog-page.html"><img
-                                                src="assets/img/all/childern/Mask Group 10.png" alt=""></a>
-                                    </div>
-                                </div>
-                                <div class="col-lg-7 col-md-9 col-sm-12">
-                                    <div class="event-contain-body">
+                                    <div class="col-lg-5 col-md-12 ">
                                         <a href="Event-Blog-page.html">
-                                            <p class="main-title">Event title will come here event title will come here
-                                                event title will
-                                                come here even title will come here</p>
+                                            <div class="img-box">
+                                                <img src="assets/img/all/google-icon.png" alt="">
+                                            </div>
                                         </a>
-                                        <p class="date">20/02/2023 - 22/02/2023</p>
+                                    </div>
+                                    <div class="col-lg-7 col-md-12 ">
+                                        <div class="event-contain-body">
+                                            <a href="Event-Blog-page.html">
+                                                <p class="main-title">Event title will come here event title will come here
+                                                    event title will
+                                                    come here even title will come here</p>
+                                            </a>
+                                            <p class="date">20/02/2023 - 22/02/2023</p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
                     </div>
                     <div class="pre-next-setion">
                         <div>
