--- a/News-page.html
+++ b/News-page.html
@@ -191,16 +191,13 @@
                             <div class="card">
                                 <a href="News-blog-page.html">
                                     <div class="img-box">
-                                        <img src="assets/img/all/childern/Mask Group 9.png" alt="...">
+                                        <img src="assets/img/all/google-icon.png" alt="...">
                                     </div>
                                 </a>
                                 <div class="card-body">
                                     <p class="date">20/02/2023</p>
                                     <a href="News-blog-page.html">
                                         <p class="card-text">News title will come here news title will come here
-                                        </p>
-                                        <p class="card-text">News title will come here news title will come here News
-                                            title will come here news title will come here
                                         </p>
                                     </a>
                                 </div>
@@ -224,7 +221,7 @@
                             <div class=" card ">
                                 <a href="News-blog-page.html">
                                     <div class="img-box">
-                                        <img src="assets/img/all/childern/Mask Group 9.png" alt="...">
+                                        <img src="assets/img/all/johan-dear.png" alt="...">
                                     </div>
                                 </a>
                                 <div class="card-body">
