--left menu add clss and set width td  bigger

--- a/AdminUsers-page.html
+++ b/AdminUsers-page.html
@@ -107,6 +107,9 @@
                                     <a href="#" class="card-link">
                                         <span class="text-nowrap fw-bold">31</span>
                                     </a>
+                                    <a href="#" class="card-btn-link card-btn-hide">
+                                        <i class="fa-solid fa-circle-plus ms-4 fw-bold"></i>
+                                    </a>
                                 </div>
                             </div>
                             <div class="card-body ">
@@ -117,7 +120,7 @@
                                     <a href="#" class="card-link">
                                         <span class="text-nowrap fw-bold">254</span>
                                     </a>
-                                    <a href="#" class="card-btn-link">
+                                    <a href="#" class="card-btn-link card-btn-hide">
                                         <i class="fa-solid fa-circle-plus ms-4 fw-bold"></i>
                                     </a>
                                 </div>
@@ -160,7 +163,7 @@
                                     <a href="#" class="card-link">
                                         <span class="text-nowrap fw-bold">12</span>
                                     </a>
-                                    <a href="#" class="card-btn-link"><i class="fa-solid fa-circle-plus ms-4 fw-bold"></i>
+                                    <a href="#" class="card-btn-link card-btn-hide"><i class="fa-solid fa-circle-plus ms-4 fw-bold"></i>
                                     </a>
                                 </div>
                             </div>
@@ -213,7 +216,7 @@
                                     <a href="#" class="card-link">
                                         <span class="text-nowrap fw-bold">3</span>
                                     </a>
-                                    <a href="#" class="card-btn-link">
+                                    <a href="#" class="card-btn-link card-btn-hide">
                                         <i class="fa-solid fa-circle-plus ms-4 fw-bold"></i>
                                     </a>
                                 </div>
