--- a/Event-page.html
+++ b/Event-page.html
@@ -108,6 +108,9 @@
                                     <a href="#" class="card-link">
                                         <span class="text-nowrap fw-bold">31</span>
                                     </a>
+                                    <a href="#" class="card-btn-link card-btn-hide">
+                                        <i class="fa-solid fa-circle-plus ms-4 fw-bold"></i>
+                                    </a>
                                 </div>
                             </div>
                             <div class="card-body ">
@@ -118,7 +121,7 @@
                                     <a href="#" class="card-link">
                                         <span class="text-nowrap fw-bold">254</span>
                                     </a>
-                                    <a href="#" class="card-btn-link">
+                                    <a href="#" class="card-btn-link card-btn-hide">
                                         <i class="fa-solid fa-circle-plus ms-4 fw-bold"></i>
                                     </a>
                                 </div>
@@ -161,7 +164,7 @@
                                     <a href="#" class="card-link">
                                         <span class="text-nowrap fw-bold">12</span>
                                     </a>
-                                    <a href="#" class="card-btn-link"><i class="fa-solid fa-circle-plus ms-4 fw-bold"></i>
+                                    <a href="#" class="card-btn-link card-btn-hide"><i class="fa-solid fa-circle-plus ms-4 fw-bold"></i>
                                     </a>
                                 </div>
                             </div>
@@ -214,7 +217,7 @@
                                     <a href="#" class="card-link">
                                         <span class="text-nowrap fw-bold">3</span>
                                     </a>
-                                    <a href="#" class="card-btn-link">
+                                    <a href="#" class="card-btn-link card-btn-hide">
                                         <i class="fa-solid fa-circle-plus ms-4 fw-bold"></i>
                                     </a>
                                 </div>
