--- a/News-blog-page.html
+++ b/News-blog-page.html
@@ -105,6 +105,9 @@
                                     <a href="#" class="card-link">
                                         <span class="text-nowrap fw-bold">31</span>
                                     </a>
+                                    <a href="#" class="card-btn-link card-btn-hide">
+                                        <i class="fa-solid fa-circle-plus ms-4 fw-bold"></i>
+                                    </a>
                                 </div>
                             </div>
                             <div class="card-body ">
@@ -115,7 +118,7 @@
                                     <a href="#" class="card-link">
                                         <span class="text-nowrap fw-bold">254</span>
                                     </a>
-                                    <a href="#" class="card-btn-link">
+                                    <a href="#" class="card-btn-link card-btn-hide">
                                         <i class="fa-solid fa-circle-plus ms-4 fw-bold"></i>
                                     </a>
                                 </div>
@@ -158,7 +161,7 @@
                                     <a href="#" class="card-link">
                                         <span class="text-nowrap fw-bold">12</span>
                                     </a>
-                                    <a href="#" class="card-btn-link"><i class="fa-solid fa-circle-plus ms-4 fw-bold"></i>
+                                    <a href="#" class="card-btn-link card-btn-hide"><i class="fa-solid fa-circle-plus ms-4 fw-bold"></i>
                                     </a>
                                 </div>
                             </div>
@@ -211,7 +214,7 @@
                                     <a href="#" class="card-link">
                                         <span class="text-nowrap fw-bold">3</span>
                                     </a>
-                                    <a href="#" class="card-btn-link">
+                                    <a href="#" class="card-btn-link card-btn-hide">
                                         <i class="fa-solid fa-circle-plus ms-4 fw-bold"></i>
                                     </a>
                                 </div>
