--- a/flag-post-page.html
+++ b/flag-post-page.html
@@ -104,6 +104,9 @@
                                     <a href="#" class="card-link">
                                         <span class="text-nowrap fw-bold">31</span>
                                     </a>
+                                    <a href="#" class="card-btn-link card-btn-hide">
+                                        <i class="fa-solid fa-circle-plus ms-4 fw-bold"></i>
+                                    </a>
                                 </div>
                             </div>
                             <div class="card-body ">
@@ -114,7 +117,7 @@
                                     <a href="#" class="card-link">
                                         <span class="text-nowrap fw-bold">254</span>
                                     </a>
-                                    <a href="#" class="card-btn-link">
+                                    <a href="#" class="card-btn-link card-btn-hide">
                                         <i class="fa-solid fa-circle-plus ms-4 fw-bold"></i>
                                     </a>
                                 </div>
@@ -158,7 +161,7 @@
                                     <a href="#" class="card-link">
                                         <span class="text-nowrap fw-bold">12</span>
                                     </a>
-                                    <a href="#" class="card-btn-link"><i
+                                    <a href="#" class="card-btn-link card-btn-hide"><i
                                             class="fa-solid fa-circle-plus ms-4 fw-bold"></i>
                                     </a>
                                 </div>
@@ -213,7 +216,7 @@
                                     <a href="#" class="card-link">
                                         <span class="text-nowrap fw-bold">3</span>
                                     </a>
-                                    <a href="#" class="card-btn-link">
+                                    <a href="#" class="card-btn-link card-btn-hide">
                                         <i class="fa-solid fa-circle-plus ms-4 fw-bold"></i>
                                     </a>
                                 </div>
